@@ -1,3 +1,3 @@
-This is RWikiBot 1.0. 
+This is RWikiBot 1.2. 
 
 This is a test README file.
