@@ -11,7 +11,7 @@ spec = Gem::Specification.new do |s|
 	s.files = FileList['lib/*.rb', 'test/*'].to_a
 	s.require_path = "lib"
 	s.autorequire = "rwikibot"
-  # s.test_files = Dir.glob('tests/*.rb')
+  s.test_files = Dir.glob('tests/*.rb')
 	s.has_rdoc = 'true'
 	s.rdoc_options = ['--inline-source']
 	s.extra_rdoc_files = ["README", "CHANGELOG"]
