@@ -2,25 +2,12 @@
 
 class MediaWikiException < Exception
   
-  def initialize (error_hash)
-    @code = error_hash.fetch('code')
-    @info = error_hash.fetch('info')
+  def initialize (message)
+    super message
   end
   
   def message()
-    return 
+    return
   end
   
-end
-
-class RWBLoginException < Exception
-  
-  def initalize (error_hash)
-    @error = error_hash.fetch('result')
-    @details = error_hash.fetch('details')
-  end
-  
-  def message
-    return 
-  end
 end
